--- a/profile.html
+++ b/profile.html
@@ -7,7 +7,7 @@
 </head>
 <style>
     img{
-        width: 10%; height: 10%; margin-left: 850px; margin-top: 50px;
+        width: 10%; height: 10%; margin-top: 50px; display: block; margin-left: auto; margin-right: auto;
     }
     ul{
         margin-left: 20px;
@@ -47,7 +47,7 @@
 <body>
     <header>
         <img src="mypic.jpg">
-        <h1 style="margin-left: 860px;">G KHIRAN</h1>
+        <h1 style="text-align: center;">G KHIRAN</h1>
         <p><strong>Email : </strong>khirangannu2003@gmail.com</p>
         <p style="margin-bottom: 30px;"><strong>Mobile Number : </strong>+91 8867403363</p>
         <p style="border-bottom: 2px solid black;"></p>
@@ -63,7 +63,7 @@
     <h1>Academic Information</h1>
 
     <table style="width:100%">
-        <tr style="font-weight: bold; font-size:30px; 600;font-style: italic ;background-image: linear-gradient(orange, red);">
+        <tr style="font-weight: bold; font-size:30px;font-style: italic ;background-image: linear-gradient(orange, red);">
             <td>Course Details</td>
             <td>Institutions</td>
             <td>University Board</td>
@@ -106,7 +106,3 @@
     </ul>
 
 </html>
-
-
-
-
